--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -143,22 +143,6 @@
             <point key="canvasLocation" x="29" y="842"/>
         </scene>
         <!--設定-->
-        <scene sceneID="7U5-k0-Vc3">
-            <objects>
-                <viewController storyboardIdentifier="Post" id="UeO-9z-S4C" customClass="PostViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="dLj-ZV-yFy">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="JCK-Zm-30m"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="設定" image="setting" id="QuP-xa-PhM"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xqO-Er-aKa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1868" y="842"/>
-        </scene>
-        <!--設定-->
         <scene sceneID="gjq-pt-2rx">
             <objects>
                 <viewController storyboardIdentifier="Setting" id="763-mH-Mb2" customClass="SettingViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
@@ -214,6 +198,73 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dct-Cv-q84" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1003" y="842"/>
+        </scene>
+        <!--Post View Controller-->
+        <scene sceneID="YVR-Vb-5XF">
+            <objects>
+                <viewController storyboardIdentifier="Post" id="bQu-XR-osF" customClass="PostViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleAspectFit" id="sSu-bu-HIM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V49-Sv-twh">
+                                <rect key="frame" x="10" y="64" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="xdW-2Q-j18"/>
+                                    <constraint firstAttribute="height" constant="120" id="xkh-tU-PEN"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jus-zQ-HFS">
+                                <rect key="frame" x="57" y="204" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="w9K-UB-QAe"/>
+                                </constraints>
+                                <state key="normal" title="投稿" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handlePostButton:" destination="bQu-XR-osF" eventType="touchUpInside" id="uB7-ix-LK2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9m6-IY-C2U">
+                                <rect key="frame" x="57" y="254" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="h4N-Qb-63D"/>
+                                </constraints>
+                                <state key="normal" title="キャンセル" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleCancelButton:" destination="bQu-XR-osF" eventType="touchUpInside" id="wnm-bo-jJ3"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x5H-Y6-NcK">
+                                <rect key="frame" x="140" y="150" width="264" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oyi-vW-k2H"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9m6-IY-C2U" firstAttribute="centerX" secondItem="sSu-bu-HIM" secondAttribute="centerX" id="4L2-PX-VYP"/>
+                            <constraint firstItem="V49-Sv-twh" firstAttribute="top" secondItem="oyi-vW-k2H" secondAttribute="top" constant="20" id="9qU-d0-t5N"/>
+                            <constraint firstItem="oyi-vW-k2H" firstAttribute="trailing" secondItem="x5H-Y6-NcK" secondAttribute="trailing" constant="10" id="LuE-OW-eUz"/>
+                            <constraint firstItem="V49-Sv-twh" firstAttribute="leading" secondItem="oyi-vW-k2H" secondAttribute="leading" constant="10" id="Pvk-vX-xDK"/>
+                            <constraint firstItem="9m6-IY-C2U" firstAttribute="top" secondItem="jus-zQ-HFS" secondAttribute="bottom" constant="10" id="YnU-hX-ZDr"/>
+                            <constraint firstItem="x5H-Y6-NcK" firstAttribute="leading" secondItem="V49-Sv-twh" secondAttribute="trailing" constant="10" id="aOJ-bS-y1A"/>
+                            <constraint firstItem="jus-zQ-HFS" firstAttribute="top" secondItem="x5H-Y6-NcK" secondAttribute="bottom" constant="20" id="haJ-NU-Ts8"/>
+                            <constraint firstItem="x5H-Y6-NcK" firstAttribute="bottom" secondItem="V49-Sv-twh" secondAttribute="bottom" id="kaa-dz-Guf"/>
+                            <constraint firstItem="oyi-vW-k2H" firstAttribute="trailing" secondItem="x5H-Y6-NcK" secondAttribute="trailing" constant="10" id="l5b-jp-kVp"/>
+                            <constraint firstItem="x5H-Y6-NcK" firstAttribute="leading" secondItem="V49-Sv-twh" secondAttribute="trailing" constant="10" id="lwv-DR-Tgv"/>
+                            <constraint firstItem="jus-zQ-HFS" firstAttribute="centerX" secondItem="sSu-bu-HIM" secondAttribute="centerX" id="mbO-ff-ahm"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="handlePostButton" destination="jus-zQ-HFS" id="pib-mh-SDK"/>
+                        <outlet property="imageView" destination="V49-Sv-twh" id="C0i-a9-dXK"/>
+                        <outlet property="textField" destination="x5H-Y6-NcK" id="oeZ-zz-18D"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eNb-96-vvH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2276.8115942028985" y="841.74107142857144"/>
         </scene>
         <!--ホーム-->
         <scene sceneID="s3O-2m-iQ4">
