--- a/Instagram/PostTableViewCell.xib
+++ b/Instagram/PostTableViewCell.xib
@@ -4,16 +4,17 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="578" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="417" height="578"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="769" id="KGk-i7-Jjw" customClass="PostTableViewCell" customModule="Instagram" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="417" height="769"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="417" height="578"/>
+                <rect key="frame" x="0.0" y="0.0" width="417" height="769"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UT1-l0-V0I">
@@ -31,7 +32,7 @@
                         <state key="normal" title="Button" image="like_none"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MSh-3a-gEo">
-                        <rect key="frame" x="80" y="446.5" width="40" height="21"/>
+                        <rect key="frame" x="80" y="447" width="40" height="20.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="OKa-6h-89b"/>
                         </constraints>
@@ -39,48 +40,110 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s98-X8-yUw">
-                        <rect key="frame" x="10" y="487" width="397" height="81"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s98-X8-yUw">
+                        <rect key="frame" x="10" y="487" width="397" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9i4-GO-PbK">
-                        <rect key="frame" x="130" y="446.5" width="257" height="21"/>
+                        <rect key="frame" x="130" y="447" width="257" height="20.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="いいねコメント" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxv-QA-yMB">
+                        <rect key="frame" x="10" y="759" width="397" height="0.0"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="いいねの投稿" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dq-91-tF0">
+                        <rect key="frame" x="10" y="532.5" width="397" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="Zjx-5E-V1Q"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WXr-dA-cfc">
+                        <rect key="frame" x="10" y="567.5" width="397" height="35"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="投稿コメント6" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NCf-MK-Zy2">
+                                <rect key="frame" x="0.0" y="0.0" width="347" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="BI1-IU-Jxr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHC-Io-GOA">
+                                <rect key="frame" x="357" y="0.0" width="40" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="40" id="87I-gB-j0j"/>
+                                    <constraint firstAttribute="height" constant="35" id="qGh-P4-QUQ"/>
+                                </constraints>
+                                <state key="normal" title="投稿" backgroundImage="btn"/>
+                            </button>
+                        </subviews>
+                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="最新のコメント" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bxk-ST-u41">
+                        <rect key="frame" x="10" y="632" width="397" height="20.5"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="bxk-ST-u41" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="0eO-hN-lRh"/>
                     <constraint firstItem="MSh-3a-gEo" firstAttribute="leading" secondItem="ndu-ch-b6o" secondAttribute="trailing" constant="10" id="5QV-xq-8cE"/>
+                    <constraint firstItem="WXr-dA-cfc" firstAttribute="top" secondItem="8dq-91-tF0" secondAttribute="bottom" constant="10" id="6dF-an-06O"/>
                     <constraint firstItem="9i4-GO-PbK" firstAttribute="leading" secondItem="MSh-3a-gEo" secondAttribute="trailing" constant="10" id="6yW-2o-jBB"/>
+                    <constraint firstAttribute="trailing" secondItem="8dq-91-tF0" secondAttribute="trailing" constant="10" id="8mv-sI-A93"/>
+                    <constraint firstAttribute="bottom" secondItem="hxv-QA-yMB" secondAttribute="bottom" constant="10" id="CuO-Qz-BKO"/>
                     <constraint firstItem="UT1-l0-V0I" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="IQf-V0-tY1"/>
                     <constraint firstItem="ndu-ch-b6o" firstAttribute="top" secondItem="UT1-l0-V0I" secondAttribute="bottom" constant="10" id="IyP-64-6UF"/>
                     <constraint firstItem="s98-X8-yUw" firstAttribute="top" secondItem="ndu-ch-b6o" secondAttribute="bottom" constant="10" id="JtM-Ej-g01"/>
-                    <constraint firstAttribute="bottom" secondItem="s98-X8-yUw" secondAttribute="bottom" constant="10" id="MyX-EK-QEq"/>
                     <constraint firstItem="ndu-ch-b6o" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="NvS-qd-U1k"/>
                     <constraint firstItem="s98-X8-yUw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="OCy-zj-Vhf"/>
+                    <constraint firstAttribute="trailing" secondItem="WXr-dA-cfc" secondAttribute="trailing" constant="10" id="Ymy-sx-Io3"/>
+                    <constraint firstItem="WXr-dA-cfc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="a2d-aF-yb1"/>
                     <constraint firstItem="9i4-GO-PbK" firstAttribute="centerY" secondItem="ndu-ch-b6o" secondAttribute="centerY" id="gGd-4Y-hGl"/>
+                    <constraint firstItem="hxv-QA-yMB" firstAttribute="top" secondItem="bxk-ST-u41" secondAttribute="bottom" constant="10" id="hEl-Ay-0vh"/>
                     <constraint firstItem="UT1-l0-V0I" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="jDP-D6-wB4"/>
                     <constraint firstAttribute="trailing" secondItem="UT1-l0-V0I" secondAttribute="trailing" id="nE5-5p-eHE"/>
+                    <constraint firstAttribute="trailing" secondItem="bxk-ST-u41" secondAttribute="trailing" constant="10" id="omz-KN-gdO"/>
+                    <constraint firstItem="8dq-91-tF0" firstAttribute="top" secondItem="s98-X8-yUw" secondAttribute="bottom" constant="25" id="phL-cF-glb"/>
+                    <constraint firstItem="8dq-91-tF0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="rgB-Ue-Mh7"/>
+                    <constraint firstItem="bxk-ST-u41" firstAttribute="top" secondItem="WXr-dA-cfc" secondAttribute="bottom" constant="10" id="sBh-Lg-AZN"/>
                     <constraint firstAttribute="trailingMargin" secondItem="9i4-GO-PbK" secondAttribute="trailing" constant="10" id="sRT-i1-eEL"/>
+                    <constraint firstAttribute="trailing" secondItem="hxv-QA-yMB" secondAttribute="trailing" constant="10" id="sTZ-9E-ZiY"/>
                     <constraint firstAttribute="trailing" secondItem="s98-X8-yUw" secondAttribute="trailing" constant="10" id="t5e-Sq-uhZ"/>
                     <constraint firstItem="MSh-3a-gEo" firstAttribute="centerY" secondItem="ndu-ch-b6o" secondAttribute="centerY" id="umz-AC-svZ"/>
+                    <constraint firstItem="hxv-QA-yMB" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="zv6-Ow-y33"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="captionLabel" destination="s98-X8-yUw" id="NZ1-PT-hG6"/>
+                <outlet property="commentButton2" destination="aHC-Io-GOA" id="IKO-Hs-IsY"/>
+                <outlet property="commentLabel" destination="hxv-QA-yMB" id="Ewc-Lf-Kg7"/>
+                <outlet property="commentTextField" destination="NCf-MK-Zy2" id="dbL-Kf-I8J"/>
                 <outlet property="dateLabel" destination="9i4-GO-PbK" id="dba-c5-LPT"/>
                 <outlet property="likeButton" destination="ndu-ch-b6o" id="lp4-AD-I9k"/>
                 <outlet property="likeLabel" destination="MSh-3a-gEo" id="zFL-vh-Pqd"/>
                 <outlet property="postImageView" destination="UT1-l0-V0I" id="paU-B4-Y79"/>
             </connections>
-            <point key="canvasLocation" x="65.94202898550725" y="119.86607142857142"/>
+            <point key="canvasLocation" x="65.94202898550725" y="183.81696428571428"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="btn" width="300" height="40"/>
         <image name="like_none" width="40" height="40"/>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
